Fix carousel images on small screens

--- a/src/index.css
+++ b/src/index.css
@@ -64,6 +64,7 @@ video:hover {
 }
 
 .carousel_content img {
+  width: -webkit-fill-available;
   max-width: 600px;
   object-fit: contain;
 }
